Other images spacing fix

--- a/Project-Gallery/css/style.scss
+++ b/Project-Gallery/css/style.scss
@@ -179,8 +179,8 @@ $color_bunker_approx: #121212;
         margin: 0 0 35px 0;
         line-height: 1.75;
     }
-    img:last-of-type {
-        padding-bottom: 40px;
+    .other-imgs {
+      padding-bottom: 40px;
     }
 }
 
